--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -345,8 +345,8 @@
         </div>
 
         <h2>ADDITIONAL INFORMATION</h2>
-        <p><strong>Languages:</strong> English (Fluent), Russian (Native), Belarusian (Native), Turkish (Basic)</p>
-        <p><strong>Certifications:</strong> Product Management (Laba), Google AdWords, Documentary & Short Video Courses</p>
+        <p style="margin-bottom:0em" ><strong>Languages:</strong> English (Fluent), Russian (Native), Belarusian (Native), Turkish (Basic)</p>
+        <p style="margin-top:0em"><strong>Certifications:</strong> Product Management (Laba), Google AdWords, Documentary & Short Video Courses</p>
     </div>
 </body>
 </html>
