--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -285,8 +285,7 @@
             <ul>
                 <li>Developed and executed marketing strategies to drive user growth.</li>
                 <li>Led cross-functional team (3–5 people) across sales, SEO, and design.</li>
-                <li><strong>Results:</strong></li>
-                <li>Achieved stable top-3 Google search rankings by optimizing SEO strategies.</li>
+                <li><strong>Results:</strong>Achieved stable top-3 Google search rankings by optimizing SEO strategies.</li>
                 <li>Improved email marketing, hitting a 19.3% open rate.</li>
             </ul>
         </div>
