Update and rename bizdev_cv.html to bizdev_cv.index.html

--- a/bizdev_cv.index.html
+++ b/bizdev_cv.index.html
@@ -213,18 +213,18 @@
 
     <div class="cv-container">
         <h1>ALEXANDRA ZHOS</h1>
-        <p class="header-info">Project & Product Lead | Marketing Manager</p>
+        <p class="header-info">Marketing | Business Development Manager</p>
         <p class="header-info">Istanbul, Turkiye | zhosalexandra@gmail.com | +905526162820</p>
 
         <h2>SUMMARY</h2>
         <p>A seasoned professional with 8+ years of diverse experience in marketing, business development, and content creation across various industries, from tech and Web3 to personal development courses. I'm passionate about discovering unusual yet grounded solutions and bring bold, impactful ideas to life.</p>
-        <p>Eager to transition into Project or Product Management roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
+        <p>Eager to transition into more advanced Business Development Management roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
 
 
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
             <div class="skill-category">
-                <h3>Project Management & Strategic Leadership:</h3>
+                <h3>Project Management & Business Development:</h3>
                 <ul>
                     <li>Project Planning & Coordination</li>
                     <li>Team Coordination & Collaboration</li>
@@ -233,7 +233,7 @@
                     <li>Partnership Development</li>
                     <li>Market & Trend Analysis</li>
                 </ul>
-                <h3>Marketing & Business Development:</h3>
+                <h3>Marketing:</h3>
                 <ul>
                     <li>Digital Marketing (SEO, Google Ads, SMM, Email Marketing)</li>
                     <li>Lead Generation & Cold Outreach</li>
