--- a/index.html
+++ b/index.html
@@ -293,20 +293,34 @@
             </ul>
         </div>
 
-        <div class="experience-item">
-            <h3>Marketing Team Lead | Integral Relationship Center (Online Courses, Psychology)</h3>
-            <p>October 2020 – January 2022</p>
-            <ul>
-                <li>Led the team (3 people) in developing and managing social media and email marketing campaigns.</li>
-            </ul>
-        </div>
+            <div class="experience-item">
+                <h3>Marketing Team Lead | Integral Relationship Center (Online Courses, Psychology)</h3>
+                <p>October 2020 – January 2022</p>
+                <ul>
+                    <li>Led a small team (3 people) in creating and executing multi-channel marketing campaigns (primarily Facebook).</li>
+                    <li>Created strategy and content for YouTube and Instagram.</li>
+                    <li><strong>Results:</strong> Implemented Kanban workflow and Agile Principles, tripling course sign-ups in two months.</li>
+                </ul>
+            </div>
 
+ <div class="experience-item">
+<h3>Freelance Brand Strategist & Digital Content Creator</h3>
+<p><strong>Remote</strong> | May 2019 – October 2020</p>
+<ul>
+  <li>Worked with influencer brands, offering full-cycle support in developing their brand.</li>
+  <li>Created WordPress websites independently and in collaboration with freelance developers.</li>
+  <li>Provided social media management, content planning, and copywriting, with a focus on visual storytelling and cohesive brand voice.</li>
+</ul>
+        </div>
+        
         <div class="experience-item">
-            <h3>Freelance Marketing and Content Creator | Remote</h3>
-            <p>January 2019 – October 2020</p>
-            <ul>
-                <li>Developed online brand concepts and digital strategies, including building WordPress websites.</li>
-            </ul>
+<h3>Photographer & Video Editor for Social Media</h3>
+<p><strong>24HoursMedia, Istanbul</strong> | January 2019 – October 2020</p>
+<ul>
+  <li>Organized and executed photo shoots for clients in entertainment, hospitality, and influencer sectors.</li>
+  <li>Produced tailored visual content for Instagram and YouTube, aligned with platform best practices.</li>
+  <li>Handled full post-production workflows, including editing, color grading, and visual polishing for client-ready delivery.</li>
+</ul>
         </div>
 
         <div class="experience-item">
