--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <h2>SUMMARY</h2>
         <p>A seasoned professional with 8+ years of diverse experience in marketing, business development, and content creation across various industries, from tech and Web3 to personal development courses. I'm passionate about discovering unusual yet grounded solutions and bring bold, impactful ideas to life.</p>
-        <p>Eager to transition into more advanced Business Development Management roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
+        <p>Eager to transition into more advanced business development roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
 
 
         <h2>KEY SKILLS</h2>
@@ -317,7 +317,7 @@
 <h3>Photographer & Video Editor for Social Media</h3>
 <p><strong>24HoursMedia, Istanbul</strong> | January 2019 – October 2020</p>
 <ul>
-  <li>Organized and executed photo shoots for clients in entertainment, hospitality, and influencer sectors.</li>
+  <li>Organized and executed photo shoots for clients in the entertainment, hospitality, and influencer sectors.</li>
   <li>Produced tailored visual content for Instagram and YouTube, aligned with platform best practices.</li>
   <li>Handled full post-production workflows, including editing, color grading, and visual polishing for client-ready delivery.</li>
 </ul>
