--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <li>Created a database of artists/projects and managed a cold outreach team.</li>
                 <li>Produced content for X (Twitter)</li>
                  <li> Pitched the project on partner calls.</li>
-                <li><strong>Results:</strong> Secured 20 interested projects and launched 4 creators on the platform, despite a nascent USP.</li>
+                <li><strong>Results:</strong> Secured 20 interested projects and launched 4 creators on the platform.</li>
             </ul>
         </div>
 
@@ -309,7 +309,7 @@
 <ul>
   <li>Worked with influencer brands, offering full-cycle support in developing their brand.</li>
   <li>Created WordPress websites independently and in collaboration with freelance developers.</li>
-  <li>Provided social media management, content planning, and copywriting, with a focus on visual storytelling and cohesive brand voice.</li>
+  <li>Provided social media management, content planning, and copywriting.</li>
 </ul>
         </div>
         
@@ -319,7 +319,6 @@
 <ul>
   <li>Organized and executed photo shoots for clients in the entertainment, hospitality, and influencer sectors.</li>
   <li>Produced tailored visual content for Instagram and YouTube, aligned with platform best practices.</li>
-  <li>Handled full post-production workflows, including editing, color grading, and visual polishing for client-ready delivery.</li>
 </ul>
         </div>
 
