--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <h2>SUMMARY</h2>
         <p>
-  With 8+ years of experience across marketing, product, and creative roles, I’ve led projects spanning visual content production, brand strategy, and early-stage business development. I’ve worked with Web3 startups, online course creators, and media production companies — often wearing multiple hats and thriving in fast-moving, cross-functional teams.
+  With 8+ years of experience across marketing, product, and creative roles, I’ve led projects spanning visual content production, brand strategy, and early-stage business development. I’ve worked with Web3 startups, online course creators, and media production companies - often wearing multiple hats and thriving in fast-moving, cross-functional teams.
 </p>
 
 <p>
@@ -226,7 +226,7 @@
 </p>
 
 <p>
-  Currently, I’m exploring opportunities in <strong>business development</strong> and <strong>content strategy</strong> — ideally within teams building immersive, creator-centered, or AI-powered products.
+  Currently, I’m exploring opportunities in <strong>business development</strong> and <strong>content strategy</strong> - ideally within teams building immersive, creator-centered, or AI-powered products.
 </p>
 
 
@@ -234,16 +234,15 @@
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
             <div class="skill-category">
-                <h3>Project Management & Business Development:</h3>
-                <ul>
-                    <li>Project Planning & Coordination</li>
-                    <li>Team Coordination & Collaboration</li>
-                     <li>Agile Methodologies (Kanban, Scrum basics)</li>
-                    <li>Strategic Roadmapping</li>
-                    <li>Partnership Development</li>
-                    <li>Revenue Model Exploration</li>
-                       <li>Market Research & Trend Analysis</li>
-                </ul>
+       <h3>Content Operations & Project Management:</h3>
+<ul>
+    <li>Project Planning & Coordination</li>
+    <li>Team Coordination & Collaboration</li>
+    <li>Agile Methodologies (Kanban, Scrum basics)</li>
+    <li>Performance Analysis & Data-Driven Decision-Making</li>
+    <li>Partnership Development</li>
+    <li>Market Research & Trend Analysis</li>
+</ul>
                 <h3>Marketing & Communications:</h3>
                 <ul>
                     <li>Lead Generation & Cold Outreach</li>
@@ -286,7 +285,7 @@
             <ul>
                 <li>Led outreach and onboarding of creators; built key partnerships from scratch.</li>
                 <li>Created a database of artists/projects and managed a cold outreach team.</li>
-                <li>Produced content for X (Twitter)</li>
+                <li>Ran <strong>X and Telegram channels</strong>.</li>
                  <li> Pitched the project on partner calls.</li>
                 <li><strong>Results:</strong> Secured 20 interested projects and launched 4 creators on the platform.</li>
             </ul>
