--- a/index.html
+++ b/index.html
@@ -220,13 +220,8 @@
         <p>
   With over 8 years of experience in marketing and content creation roles, I’ve led projects spanning visual content production and early-stage business development. I’ve worked with Web3 startups, online course creators, and media production companies - often wearing multiple hats and thriving in fast-moving, cross-functional teams.
 </p>
-
 <p>
-  I’m especially drawn to companies that value experimentation, innovation, and big-picture thinking.
-</p>
-
-<p>
-  Currently, I’m exploring opportunities in <strong>business development</strong> or <strong>content strategy</strong>, ideally within teams building immersive, creator-centered, or AI-powered products.
+  Currently, I’m exploring opportunities in business development or content strategy - ideally within teams building immersive, creator-centered, or AI-powered products.
 </p>
 
 
