--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <p>March 2022 – October 2023</p>
             <ul>
                 <li>Developed and executed marketing strategies to drive user growth and engagement.</li>
-                <li>Led a cross-functional team (3-5 people) across sales, SEO, and design, optimizing workflows for lead generation.</li>
+                <li><strong>Led a cross-functional team (3-5 people) across sales, SEO, and design, optimizing workflows for lead generation.</strong></li>
                 <li>Monitored performance using analytics, sharing insights and actionable next steps.</li>
                 <li><strong>Results:</strong> Achieved stable top-3 Google search rankings by optimizing SEO strategies and improved email marketing, hitting a 19.3% open rate.</li>
             </ul>
@@ -299,19 +299,10 @@
 
         <div class="experience-item">
             <h3>Freelance Brand Strategist & Digital Content Creator</h3>
-            <p>May 2019 – October 2020</p>
+            <p>January 2019 – October 2020</p>
             <ul>
                 <li>Managed web project development (WordPress websites) from idea to launch for influencer brands.</li>
                 <li>Provided social media management, content planning, and copywriting, focusing on visual storytelling and brand voice.</li>
-            </ul>
-        </div>
-
-        <div class="experience-item">
-            <h3>Photographer & Video Editor for Social Media</h3>
-            <p>January 2019 – October 2020</p>
-            <ul>
-                <li>Organized and executed photo shoots for clients, producing tailored visual content for Instagram and YouTube.</li>
-                <li>Handled full post-production workflows, ensuring client-ready delivery. *(Demonstrates understanding of creative production processes and requirements.)*</li>
             </ul>
         </div>
 
