--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
         <p class="header-info">Istanbul, Turkiye | zhosalexandra@gmail.com | +905526162820</p>
 
         <h2>SUMMARY</h2>
-        <p>A results-driven Project Manager with over 8 years of experience in marketing and IT, specializing in optimizing digital production workflows from brief to launch. I excel at managing web project development, driving conversion rate optimization through data-driven insights and A/B testing, and leading cross-functional teams. </p>
-<p>I'm passionate about discovering unusual yet grounded solutions and bringing bold, impactful ideas to life.</p>
-        <p> My preference is for companies that leverage AI and are driven by innovation.</p>
+        <p>A results-driven Project Manager with over 8 years of experience in marketing, specializing in optimizing digital production workflows from brief to launch. I excel at managing web project development, driving conversion rate optimization through data-driven insights and A/B testing, and leading cross-functional teams. </p>
+<p>I'm passionate about discovering unusual yet grounded solutions and bringing bold, impactful ideas to life. My preference is for companies that leverage AI and are driven by innovation.</p>
+     
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
             <div class="skill-category">
