--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </div>
 
         <div class="experience-item">
-            <h3>Product Marketing Manager | Amasty</h3>
+            <h3>Product Marketing Manager | Amasty (Magento plugins developer)</h3>
             <p>November 2016 – November 2018</p>
             <ul>
                 <li><strong>Led the development and optimization of marketing landing pages</strong>, creating persuasive copy to increase conversion rates.</li>
@@ -318,7 +318,7 @@
         </div>
 
         <div class="experience-item">
-            <h3>Project Manager | Sarmont</h3>
+            <h3>Project Manager | Sarmont (marketing field research)</h3>
             <p>May 2016 – November 2016</p>
             <ul>
                 <li>Led research projects (surveys, focus groups, shopper studies), managing project lifecycle from planning to reporting. *(Direct Project Manager title, showcasing methodology application.)*</li>
@@ -326,7 +326,7 @@
         </div>
 
         <div class="experience-item">
-            <h3>CMO Assistant</h3>
+            <h3>CMO Assistant | Changeagain.me (start-up A/B testing tool)</h3>
             <p>July 2015 – October 2015</p>
             <ul>
                 <li>Managed web content, SEO, email marketing, and ad campaigns.</li>
