--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <h3>Project Manager | Sarmont (marketing field research)</h3>
             <p>May 2016 – November 2016</p>
             <ul>
-                <li>Led research projects (surveys, focus groups, shopper studies), managing project lifecycle from planning to reporting. *(Direct Project Manager title, showcasing methodology application.)*</li>
+                <li>Led research projects (surveys, focus groups, shopper studies), managing project lifecycle from planning to reporting.</li>
             </ul>
         </div>
 
