--- a/index.html
+++ b/index.html
@@ -212,42 +212,38 @@
 
     <div class="cv-container">
         <h1>ALEXANDRA ZHOS</h1>
-        <p class="header-info">Performance Marketing & Project Manager</p>
+        <p class="header-info">Performance & Content Marketing </p>
         <p class="header-info">Istanbul, Turkiye | zhosalexandra@gmail.com | +905526162820</p>
 
         <h2>SUMMARY</h2>
-        <p>A highly adaptable and results-driven professional with 8+ years of experience in marketing, project management, and digital strategy. Specializing in performance-driven campaigns and workflow optimization, I excel at driving conversion growth through data analysis, A/B testing, and hands-on execution across various platforms. I thrive in fast-paced, innovative environments and am adept at rapidly acquiring new skills and deep technical understanding, as demonstrated by my swift immersion into complex fields like Web3 Ordinals.</p>
+        <p>A highly adaptable and results-driven professional with 8+ years of experience in marketing, project management, and digital strategy. Excited to join a passionate team building innovative products.</p>
 
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
             <div class="skill-category">
                 <h3>Performance Marketing & Analytics:</h3>
                 <ul>
-                    <li>Paid Acquisition (Google Ads, Meta Ads, LinkedIn Ads - *eager to re-engage*)</li>
+                    <li>Paid Acquisition (Google Ads, Meta Ads)</li>
                     <li>A/B Testing & Conversion Rate Optimization (CRO)</li>
-                    <li>Analytics & Performance Monitoring (Google Analytics, Meta Business Suite)</li>
-                    <li>Data-to-Actionable Insights Translation</li>
-                    <li>Lead Generation & Pipeline Development</li>
-                    <li>Retargeting & Cold Traffic Experimentation</li>
-                </ul>
+                    <li>Analytics & Performance Monitoring (Google Analytics, Meta Business Suite, SemRush)</li>
+                    <li>Lead Generation</li>
+                    </ul>
                 <h3>Project & Operations Management:</h3>
                 <ul>
                     <li>Project Planning & Coordination</li>
-                    <li>Workflow Optimization & Process Improvement (Briefing, Requirements, Design, Copywriting, QA, Launch)</li>
+                    <li>Workflow Optimization & Process Improvement (Briefing, Requirements, Design, Copywriting, Launch)</li>
                     <li>Agile Methodologies (Kanban, Scrum basics)</li>
-                    <li>Time-to-Market Reduction</li>
                     <li>Team Coordination & Cross-functional Collaboration</li>
-                    <li>Stakeholder Management</li>
-                    <li>Problem-Solving</li>
+                  <li>Problem-Solving</li>
                 </ul>
             </div>
 
             <div class="skill-category">
                 <h3>Digital Strategy & Content:</h3>
                 <ul>
-                    <li>Digital Marketing (SEO, SMM, Email Marketing)</li>
+                    <li>SEO, SMM, Email Marketing</li>
                     <li>Content Strategy & Brand Positioning</li>
-                    <li>Landing Page & Quiz Development (Brief to Launch)</li>
+                    <li>Landing Page Development & Optımızatıon </li>
                     <li>Copywriting (Marketing, Technical, Social Media)</li>
                     <li>Competitor Research & Trend Analysis</li>
                 </ul>
@@ -256,10 +252,9 @@
                     <li>Project Management Tools (Jira, Trello, Notion)</li>
                     <li>CRM Software (Zoho, HubSpot)</li>
                     <li>Web Development (WordPress, Tilda, HTML Basics)</li>
-                    <li>Design & Visuals (Figma, Adobe Premiere Pro / Photoshop, AI Image & Video Generation, Visual Composition & Art Direction)</li>
+                    <li>Design & Visuals (Figma, Adobe Premiere Pro / Photoshop, Google Veo 3, Kling AI 2.1)</li>
                     <li>AI-Powered Research & Copy (ChatGPT, Gemini, NotebookLM)</li>
                     <li>Sales & Outreach (Apollo)</li>
-                    <li><em>Familiarity with UX/UI trends and web design principles</em></li>
                     <li><em>Experience with low-code/no-code platforms</em></li>
                 </ul>
             </div>
@@ -310,19 +305,10 @@
 
         <div class="experience-item">
             <h3>Freelance Brand Strategist & Digital Content Creator</h3>
-            <p>May 2019 – October 2020</p>
+            <p>January 2019 – October 2020</p>
             <ul>
                 <li>Managed web project development (WordPress websites) from idea to launch for influencer brands.</li>
                 <li>Provided social media management, content planning, and copywriting, focusing on visual storytelling and brand voice.</li>
-            </ul>
-        </div>
-
-        <div class="experience-item">
-            <h3>Photographer & Video Editor for Social Media</h3>
-            <p>January 2019 – October 2020</p>
-            <ul>
-                <li>Organized and executed photo shoots for clients, producing tailored visual content for Instagram and YouTube.</li>
-                <li>Handled full post-production workflows, ensuring client-ready delivery. *(Demonstrates understanding of creative production processes and requirements for ad creatives.)*</li>
             </ul>
         </div>
 
