--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <p class="header-info">Istanbul, Turkiye | zhosalexandra@gmail.com | +905526162820</p>
 
         <h2>SUMMARY</h2>
-        <p>A highly adaptable and results-driven professional with 8+ years of experience in marketing, project management, and digital strategy. Excited to join a passionate team building innovative products.</p>
+        <p>A highly adaptable and results-driven professional with 8+ years of experience in marketing, project management, and digital strategy. I thrive in dynamic environments, adept at wearing different hats and rapidly acquiring new skills. Excited to dive deeper into performance marketing and automation, I'm driven to build innovative products and contribute to a passionate team.</p>
 
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
