--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
         <h2>ADDITIONAL INFORMATION</h2>
         <p style="margin-bottom:0em" ><strong>Languages:</strong> English (Fluent), Russian (Native), Belarusian (Native), Turkish (Basic)</p>
-        <p style="margin-top:0em"><strong>Certifications:</strong> Product Management (Laba, 2018), Google AdWords (2016), Documentary Film Course (2017), Short Video Course (2018)</p>
+        <p style="margin-top:0em"><strong>Certifications:</strong> Product Management (Laba, 2018), Google AdWords (2016)</p>
     </div>
 </body>
 </html>
